# capella_mmdet3d

src/: package.xml  setup.cfg  setup.py
src/capella_mmdet3d_node/: pointpillar.py  pointpillarcopy.py  replay_single_frame.py
src/capella_mmdet3d_node/configs/_base_/datasets/: nus-3d.py
src/capella_mmdet3d_node/configs/_base_/models/: pointpillars_hv_fpn_nus.py
src/capella_mmdet3d_node/configs/_base_/schedules/: cyclic-20e.py
src/capella_mmdet3d_node/configs/pth/: 1.py
src/launch/: centerPoint.py  pointPillars.py
